--- a/work/mybiblio.bib
+++ b/work/mybiblio.bib
@@ -454,3 +454,39 @@
     title = {LingTypology},
     url = {https://oneadder.github.io/lingtypology/}
 }
+
+@article{Pusztai2013,
+    author = {Pusztai, Lajos
+            and Hatzis, Christos
+            and Andre, Fabrice},
+    title={Reproducibility of research and preclinical validation: problems and solutions},
+    journal={Nature Reviews Clinical Oncology},
+    year={2013},
+    month={Oct},
+    day = {01},
+    publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved. SN  -},
+    volume = {10},
+    pages = {720 EP  -},
+    note={Perspective},
+    url={https://doi.org/10.1038/nrclinonc.2013.171}
+}
+
+@online{abvd,
+    author = {Greenhill, Simon J. and
+            Robert Blust and 
+            Russell Gray},
+    title = {Austronesian Basic Vocabulary Database},
+    year = {2019},
+    url = {https://abvd.shh.mpg.de/austronesian/}
+}
+
+@online{kde,
+    author = {Duong, Tarn},
+    title = {An introduction to kernel density estimation},
+    year = {2001},
+    note = {An edited version of a seminar given as part of
+            the Weatherburn Lecture Series for the
+            Department of Mathematics and Statistics,
+            at the University of Western Australia}
+}
+
